--- a/Bai1.ipynb
+++ b/Bai1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Bai1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN9F+xY+DKJBhbu0QalsVxn",
+      "authorship_tag": "ABX9TyMiI9uhVAu5zYhHSc6+zRj4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "1OtrBR0O4mPq"
       },
@@ -53,19 +53,45 @@
         "print('hello')"
       ],
       "metadata": {
+        "id": "xNCjj9lX4s3M"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n = 10000000\n",
+        "X = [(2-0)*k/n for k in range(0, n+1)]"
+      ],
+      "metadata": {
+        "id": "X6KIpHQxHbq-"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "S = 0\n",
+        "for k in range(1, n + 1):\n",
+        "  S = S + X[k]**2 * (X[k] - X[k-1])\n",
+        "print (S)"
+      ],
+      "metadata": {
+        "id": "-ORicEneHi2p",
+        "outputId": "ffc48184-bfbf-49f5-a7ca-9ca28fbaf0d4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "xNCjj9lX4s3M",
-        "outputId": "7e5e9b61-ca36-4512-a5ae-09d3a42a9e8c"
+        }
       },
-      "execution_count": 1,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "hello\n"
+            "2.666667066666659\n"
           ]
         }
       ]
