Được tạo bằng Colaboratory

--- a/Bai1.ipynb
+++ b/Bai1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Bai1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMiI9uhVAu5zYhHSc6+zRj4",
+      "authorship_tag": "ABX9TyOxCyAQX5XhjUyPjq2R8XTe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "1OtrBR0O4mPq"
       },
@@ -67,7 +67,7 @@
       "metadata": {
         "id": "X6KIpHQxHbq-"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -85,13 +85,70 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "2.666667066666659\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sympy import *\n",
+        "x = Symbol('x')\n",
+        "from sympy.solvers.solvers import denoms\n",
+        "pt = (1/x)*1/(x-3)\n",
+        "dd = denoms(pt)\n",
+        "print(dd)"
+      ],
+      "metadata": {
+        "id": "KhKjY6Z_NU-2",
+        "outputId": "07cb6dde-791a-4e15-af44-01f0b9e9f666",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{x, x - 3}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "eq = (1+1/x)/(x-1)\n",
+        "from sympy.solvers.solvers import denoms\n",
+        "loaitru = set()\n",
+        "for d in denoms(eq):\n",
+        "  for s in solve(d):\n",
+        "    loaitru.add(s)\n",
+        "print(loaitru)    \n"
+      ],
+      "metadata": {
+        "id": "iwr2pEOZPVNr",
+        "outputId": "ae048d4e-12af-4b7f-aa06-57bf409fbad0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{0, 1}\n"
           ]
         }
       ]
