--- a/Buổi_2.ipynb
+++ b/Buổi_2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Buổi 2.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMQOp/fOxlmEGk8Qe7Ub+TV",
+      "authorship_tag": "ABX9TyN6Ynpl3iINggw6NBMYKhvy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -118,11 +118,40 @@
     {
       "cell_type": "markdown",
       "source": [
-        ""
+        "Thực hành 11"
       ],
       "metadata": {
         "id": "nz-Ks2y6KrD8"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sympy import limit, sin, S\n",
+        "limit(x*sin(1/x),x,S.Infinity)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 37
+        },
+        "id": "G7Kk3hdELczV",
+        "outputId": "89772539-08f1-4943-bf49-972fc4a7fe86"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/latex": "$\\displaystyle 1$",
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
     }
   ]
 }
