Được tạo bằng Colaboratory

--- a/Buổi_2.ipynb
+++ b/Buổi_2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Buổi 2.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN6Ynpl3iINggw6NBMYKhvy",
+      "authorship_tag": "ABX9TyMkSYM6cJn3yIL0JzZ4cOto",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -152,6 +152,54 @@
           "execution_count": 10
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Lãi suất"
+      ],
+      "metadata": {
+        "id": "WnR2BZFmMOr1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sympy import Limit, Symbol, S\n",
+        "n = Symbol('n')\n",
+        "Limit((1+1/n)**n,n,S.Infinity).doit()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 38
+        },
+        "id": "8Zag1uX2MPDL",
+        "outputId": "f717fd99-67d6-43d5-b263-33fb7add27d8"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/latex": "$\\displaystyle e$",
+            "text/plain": [
+              "E"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "wW0r4R1vMtgC"
+      }
     }
   ]
 }
