Được tạo bằng Colaboratory

--- a/Buổi_2.ipynb
+++ b/Buổi_2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Buổi 2.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMkSYM6cJn3yIL0JzZ4cOto",
+      "authorship_tag": "ABX9TyPzdp4Zkcl+IyxPBAESSZlV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -195,11 +195,43 @@
     {
       "cell_type": "markdown",
       "source": [
-        ""
+        "Thực hành 12"
       ],
       "metadata": {
         "id": "wW0r4R1vMtgC"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sympy import Symbol, Limit, S\n",
+        "p = Symbol('p', positive=True)\n",
+        "r = Symbol('r', positive=True)\n",
+        "t = Symbol('t', positive=True)\n",
+        "Limit(p*(1+r/n)**(n*t),n,S.Infinity).doit()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 38
+        },
+        "id": "gXbfMKmiNEEX",
+        "outputId": "0f875a4b-c420-479e-fb4b-c6ba5d11895d"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/latex": "$\\displaystyle p e^{r t}$",
+            "text/plain": [
+              "p*exp(r*t)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
     }
   ]
 }
