--- a/Buổi_2.ipynb
+++ b/Buổi_2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Buổi 2.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPzdp4Zkcl+IyxPBAESSZlV",
+      "authorship_tag": "ABX9TyPo3i1EA2n9vpSrkoJhIcs7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -230,6 +230,51 @@
           },
           "metadata": {},
           "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Thực hành 13"
+      ],
+      "metadata": {
+        "id": "pmefuTAGN67-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sympy import Symbol, Limit\n",
+        "t = Symbol('t')\n",
+        "St = 5*t**2 + 2*t + 8 \n",
+        "t1 = Symbol('t1')\n",
+        "delta_t = Symbol('delta_t')\n",
+        "St1 = St.subs({t: t1})\n",
+        "St1_delta = St.subs({t: t1 + delta_t})\n",
+        "\n",
+        "Limit((St1_delta-St1)/delta_t, delta_t,0).doit()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 38
+        },
+        "id": "ZeXKWFX3N8ek",
+        "outputId": "ba143356-915f-4398-ec27-6ca046f8a826"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/latex": "$\\displaystyle 10 t_{1} + 2$",
+            "text/plain": [
+              "10*t1 + 2"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
         }
       ]
     }
