Được tạo bằng Colaboratory

--- a/Chương_2.ipynb
+++ b/Chương_2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Chương 2.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMVo6DAoKa1aqnAQv+9Ymo6",
+      "authorship_tag": "ABX9TyN74xXdP0q2l7hWUK1R2qUV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -566,6 +566,162 @@
           "metadata": {
             "needs_background": "light"
           }
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Thực hành 8"
+      ],
+      "metadata": {
+        "id": "oGxQo_bdLAAt"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sympy import Symbol, Derivative\n",
+        "t = Symbol('t')\n",
+        "st = 5*t**2 + 2*t + 8\n",
+        "Derivative(st,t)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 52
+        },
+        "id": "_BqaOi6wLBny",
+        "outputId": "0418604a-62b9-46d1-8122-ef8b859a7a1e"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/latex": "$\\displaystyle \\frac{d}{d t} \\left(5 t^{2} + 2 t + 8\\right)$",
+            "text/plain": [
+              "Derivative(5*t**2 + 2*t + 8, t)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "d = Derivative(st,t)\n",
+        "d.doit()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "hI4iCnttLXsp",
+        "outputId": "f0f32c40-86f1-4a41-9829-cd57bbfede63"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/latex": "$\\displaystyle 10 t + 2$",
+            "text/plain": [
+              "10*t + 2"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "d.doit().subs({t:1})"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "WpdEgRoJLi1Y",
+        "outputId": "56a29e68-8556-4ff7-a7fb-a40cce45bad5"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/latex": "$\\displaystyle 12$",
+            "text/plain": [
+              "12"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "t1 = Symbol('t1')\n",
+        "d.doit().subs({t:t1})\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "uUTVvoPDL1qz",
+        "outputId": "a5ce9fe4-1597-4d96-8437-f907a704812b"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/latex": "$\\displaystyle 10 t_{1} + 2$",
+            "text/plain": [
+              "10*t1 + 2"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "t2 = Symbol('t2')\n",
+        "t2 = 10\n",
+        "d.doit().subs({t:t2})"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "n3JKst7XL--H",
+        "outputId": "c2d3f6c0-5641-4304-9087-01ba122aed37"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/latex": "$\\displaystyle 102$",
+            "text/plain": [
+              "102"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
         }
       ]
     }
