Được tạo bằng Colaboratory

--- a/Chương_2.ipynb
+++ b/Chương_2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Chương 2.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN74xXdP0q2l7hWUK1R2qUV",
+      "authorship_tag": "ABX9TyMPgDMsdjzFYNdNywhZ0DdQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -722,6 +722,46 @@
           },
           "metadata": {},
           "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Thực hành 9"
+      ],
+      "metadata": {
+        "id": "GjohVLiaMw0S"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sympy import Symbol, Derivative\n",
+        "x = Symbol('x')\n",
+        "f = (x**3 + x**2 +x) *(x**2 + x)\n",
+        "Derivative(f,x).doit()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "PpXD-SJEMzFs",
+        "outputId": "e758040d-709a-4f9e-d4c2-2e47a4cf7b9b"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/latex": "$\\displaystyle \\left(2 x + 1\\right) \\left(x^{3} + x^{2} + x\\right) + \\left(x^{2} + x\\right) \\left(3 x^{2} + 2 x + 1\\right)$",
+            "text/plain": [
+              "(2*x + 1)*(x**3 + x**2 + x) + (x**2 + x)*(3*x**2 + 2*x + 1)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
         }
       ]
     }
