--- a/Chương_2.ipynb
+++ b/Chương_2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Chương 2.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMPgDMsdjzFYNdNywhZ0DdQ",
+      "authorship_tag": "ABX9TyMC0FVruN3LubyMIjwajLUt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -762,6 +762,95 @@
           },
           "metadata": {},
           "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Thực hành 10"
+      ],
+      "metadata": {
+        "id": "CcxLuD7HNtOf"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "a. f(x) = sin(2x)"
+      ],
+      "metadata": {
+        "id": "HzkUFrQeNv59"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import sympy\n",
+        "x = Symbol('x')\n",
+        "f = sympy.sin(2*x)\n",
+        "Derivative(f,x).doit()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "MRfB1M7EN3Y_",
+        "outputId": "c6f09f6e-e859-4bc1-9d51-30d5c14014eb"
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/latex": "$\\displaystyle 2 \\cos{\\left(2 x \\right)}$",
+            "text/plain": [
+              "2*cos(2*x)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 31
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "b. f(x) = sin(x)cos(x)"
+      ],
+      "metadata": {
+        "id": "f5EBZycuOJB1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import sympy\n",
+        "x = Symbol('x')\n",
+        "f = sympy.sin(x) * sympy.cos(x)\n",
+        "Derivative(f,x).doit()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 37
+        },
+        "id": "aoPsnlcjOSe6",
+        "outputId": "6571f021-c260-41a3-97dd-2002ad340c73"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/latex": "$\\displaystyle - \\sin^{2}{\\left(x \\right)} + \\cos^{2}{\\left(x \\right)}$",
+            "text/plain": [
+              "-sin(x)**2 + cos(x)**2"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 32
         }
       ]
     }
