--- a/Chương_4.ipynb
+++ b/Chương_4.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Chương 4.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPICjVxPlZHRl9//iK/72qd",
+      "authorship_tag": "ABX9TyOMyH5V1qHZSTzBYis3tSM7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -501,10 +501,250 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "import scipy\n",
+        "from sympy import *\n",
+        "import sys\n",
+        "sys.displayhook = pprint\n",
+        "x = Symbol('x')\n",
+        "bt1 = integrate(x**2 + x + 1,x)\n",
+        "pprint (bt1)\n",
+        "bt2 = integrate(x/(x**2 + 2*x+1),x)\n",
+        "pprint(bt2)\n",
+        "bt3 = integrate(x**2*exp(x)*cos(x),x)\n",
+        "pprint (bt3)\n",
+        "bt4 = integrate(exp(-x**2)*erf(x),x)\n",
+        "pprint (bt4)"
       ],
       "metadata": {
-        "id": "3AK4pbBofktm"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3AK4pbBofktm",
+        "outputId": "554e1a87-8465-42e2-a7cd-9ea05a3de298"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            " 3    2    \n",
+            "x    x     \n",
+            "── + ── + x\n",
+            "3    2     \n",
+            "               1  \n",
+            "log(x + 1) + ─────\n",
+            "             x + 1\n",
+            " 2  x           2  x                         x           x       \n",
+            "x ⋅ℯ ⋅sin(x)   x ⋅ℯ ⋅cos(x)      x          ℯ ⋅sin(x)   ℯ ⋅cos(x)\n",
+            "──────────── + ──────────── - x⋅ℯ ⋅sin(x) + ───────── - ─────────\n",
+            "     2              2                           2           2    \n",
+            "      2   \n",
+            "√π⋅erf (x)\n",
+            "──────────\n",
+            "    4     \n",
+            "None\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Thực hành 9"
+      ],
+      "metadata": {
+        "id": "DPV-o761iCHK"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sympy import Integral,Symbol \n",
+        "x = Symbol('x')\n",
+        "k = Symbol('k') \n",
+        "Integral(k*x, x) "
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 55
+        },
+        "id": "gq4tbGkuiDZs",
+        "outputId": "d02231af-310a-42de-a23f-981d682bb1f6"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/latex": "$\\displaystyle \\int k x\\, dx$",
+            "text/plain": [
+              "Integral(k*x, x)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Integral(k*x, x).doit() "
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 54
+        },
+        "id": "f5F7BZEViciu",
+        "outputId": "882b46ac-7ea3-463d-fbc7-d2d1d4dcade1"
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/latex": "$\\displaystyle \\frac{k x^{2}}{2}$",
+            "text/plain": [
+              "k*x**2/2"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 31
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Thực hành 10"
+      ],
+      "metadata": {
+        "id": "PGSal_b3ifPj"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sympy import pprint, Integral \n",
+        "F = Integral(k*x, x).doit() \n",
+        "pprint(F) "
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NnEdWqyMig6D",
+        "outputId": "15965967-cc45-47cf-feab-70ef0c502ed6"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "   2\n",
+            "k⋅x \n",
+            "────\n",
+            " 2  \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Thực hành 11"
+      ],
+      "metadata": {
+        "id": "GkHNTUZhiwBn"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Integral(k*x, (x, 0, 2)).doit()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 38
+        },
+        "id": "YLpewVYZix7A",
+        "outputId": "576f0ab6-c50b-421d-8761-26f6aa516080"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/latex": "$\\displaystyle 2 k$",
+            "text/plain": [
+              "2*k"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 33
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Thực hành 12"
+      ],
+      "metadata": {
+        "id": "n_Tt97SKjdof"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sympy import Integral, Symbol \n",
+        "x = Symbol('x') \n",
+        "Integral(x, (x, 2, 4)).doit()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 37
+        },
+        "id": "OvNCOmD_jfjz",
+        "outputId": "74e2ff13-82a4-49ab-a79f-ca7b55ea95b3"
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/latex": "$\\displaystyle 6$",
+            "text/plain": [
+              "6"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Thực hành 13"
+      ],
+      "metadata": {
+        "id": "KYJEp2R0jsHf"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sympy import Symbol, exp, sqrt, pi, Integral\n"
+      ],
+      "metadata": {
+        "id": "kaJ5ZowijuLd"
       },
       "execution_count": null,
       "outputs": []
