--- a/Chương_4.ipynb
+++ b/Chương_4.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Chương 4.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOMyH5V1qHZSTzBYis3tSM7",
+      "authorship_tag": "ABX9TyOjJ9N7p3aqxTY0Od4T6QjH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -741,13 +741,33 @@
     {
       "cell_type": "code",
       "source": [
-        "from sympy import Symbol, exp, sqrt, pi, Integral\n"
+        "from sympy import Symbol, exp, sqrt, pi, Integral\n",
+        "x = Symbol('x')\n",
+        "p = exp(-(x-10)**2/2)/sqrt(2*pi)\n",
+        "Integral(p,(x,11,12)).doit().evalf()"
       ],
       "metadata": {
-        "id": "kaJ5ZowijuLd"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 37
+        },
+        "id": "kaJ5ZowijuLd",
+        "outputId": "d1d4aa93-879f-4b93-aeef-8b96c66c1849"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/latex": "$\\displaystyle 0.135905121983278$",
+            "text/plain": [
+              "0.135905121983278"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 35
+        }
+      ]
     }
   ]
 }
