Được tạo bằng Colaboratory

--- a/Chương_5.ipynb
+++ b/Chương_5.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Chương 5.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMpagKk7mEFwUSaUDlz7O/z",
+      "authorship_tag": "ABX9TyMONQsUSM1GqyVbmCYHpuNY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -463,12 +463,472 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Thực hành 5"
+      ],
+      "metadata": {
+        "id": "EoCg_jyKjulx"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "goc = np.pi/3\n",
+        "A = np.array([ [np.cos(goc), -np.sin(goc)], [np.sin(goc), np.cos(goc)] ])\n",
+        "V = np.array([1., 0.])\n",
+        "Y = np.dot(A, V)\n",
+        "Y"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QY5cofXMjwFa",
+        "outputId": "135c5e84-60d6-43a9-925b-bd4852b03b45"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0.5      , 0.8660254])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Thực hành 6"
+      ],
+      "metadata": {
+        "id": "ap5A3403j5VW"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from numpy import diff\n",
+        "dx = 0.1\n",
+        "y = [1, 2, 3, 4, 4, 5, 6]\n",
+        "dy = diff(y)/dx\n",
+        "dy"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "77cuWRl-j6_C",
+        "outputId": "b26b029c-279a-4913-8594-467476863ae4"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([10., 10., 10.,  0., 10., 10.])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "z = np.array([1,2,3,4,4,5,6])\n",
+        "dz = diff(z)/dx\n",
+        "dz"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TdDU8SQ-j-Cz",
+        "outputId": "44e9e1eb-f4d9-409d-ccb5-fb50d78bab7e"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([10., 10., 10.,  0., 10., 10.])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from numpy import diff\n",
+        "x = [.1, .2, .5, .6, .7, .8, .9]\n",
+        "y = [1,2,3,4,4,5,6]\n",
+        "dydx = diff(y)/diff(x)\n",
+        "print(dydx)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KACQgB3PkAFD",
+        "outputId": "721ed57e-e6d2-40ba-c995-22179b44d88e"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[10.          3.33333333 10.          0.         10.         10.        ]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Thực hành 7"
+      ],
+      "metadata": {
+        "id": "7eFbHabpkDe-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sympy.geometry import *"
+      ],
+      "metadata": {
+        "id": "gTsgT8kVkE4C"
+      },
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "P1 = Point(0,0)\n",
+        "P2 = Point(3,4)\n",
+        "P3 = Point(2,-1)\n",
+        "P4 = Point(-1,-5)"
+      ],
+      "metadata": {
+        "id": "tYlu6cdbkJai"
+      },
+      "execution_count": 22,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "S1 = Segment(P1,P2)\n",
+        "S2 = Segment(P3,P4)"
+      ],
+      "metadata": {
+        "id": "wRo2hxNgkNVF"
+      },
+      "execution_count": 23,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Point.is_collinear(P1,P2,P3)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Og62VQTzkTrm",
+        "outputId": "5547fe6b-b2df-4080-8a91-20eadb75f074"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "S1.length"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 37
+        },
+        "id": "ykS5Bj-7kXQc",
+        "outputId": "d747c71f-bc8c-4085-b378-fe1f11455b81"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/latex": "$\\displaystyle 5$",
+            "text/plain": [
+              "5"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "S2.midpoint"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 58
+        },
+        "id": "GqrkYgEekZnC",
+        "outputId": "7f5f5efa-7ce2-4cf0-ad92-76264c1f94dc"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/latex": "$\\displaystyle Point2D\\left(\\frac{1}{2}, -3\\right)$",
+            "text/plain": [
+              "Point2D(1/2, -3)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "S1.slope"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 52
+        },
+        "id": "ntp-cF-2kc8S",
+        "outputId": "c3529ca0-50f0-4f76-822b-08d71feb9a19"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/latex": "$\\displaystyle \\frac{4}{3}$",
+            "text/plain": [
+              "4/3"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "S1.intersection(S2)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5QllQ2zxkgjR",
+        "outputId": "60fddac5-5872-4585-fdac-d3cc985195f8"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Segment.angle_between(S1,S2)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 38
+        },
+        "id": "HtGWxQSlkjKG",
+        "outputId": "33180d62-b2c3-47b5-b78a-871c77b4956d"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/latex": "$\\displaystyle \\pi$",
+            "text/plain": [
+              "pi"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "S1.contains(P3)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "D2biAUcUkl0D",
+        "outputId": "0b43640b-acda-4acf-c94c-1bf66709e0cf"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "L1 = Line(P1,P2)\n",
+        "L1.equation()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 38
+        },
+        "id": "lPyLvL9okocd",
+        "outputId": "6948f0d3-3977-48d0-d6cf-c2fe5825dc70"
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/latex": "$\\displaystyle - 4 x + 3 y$",
+            "text/plain": [
+              "-4*x + 3*y"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 31
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "L1.is_parallel(S1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KpEAxdp3krTJ",
+        "outputId": "e0d76e02-f8c3-4a05-d0c8-24d6a7af498b"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 32
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "L1.is_parallel(S2)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ecjc__eLkufY",
+        "outputId": "92048527-8af2-485d-9e6a-769a71ecdfa5"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 33
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Thực hành 8"
+      ],
+      "metadata": {
+        "id": "sp4pNjm-kw8F"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         ""
       ],
       "metadata": {
-        "id": "D61a__hge0LR"
+        "id": "Q_qwpeEUkyb7"
       },
       "execution_count": null,
       "outputs": []
