--- a/BTVN.ipynb
+++ b/BTVN.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "BTVN.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNheZFUsNeaSqzW2Te99Eqh",
+      "authorship_tag": "ABX9TyNDxcNiLJVI9QByNnmLmTVN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -71,7 +71,7 @@
         "id": "tS7P_Yztv9XF",
         "outputId": "f1d794ef-567d-461e-91c7-453347259fea"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -112,7 +112,7 @@
         "id": "3HP5to5tw6LD",
         "outputId": "2179bba4-faea-434b-9234-49e18ec4b5a2"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -125,6 +125,326 @@
           "metadata": {
             "needs_background": "light"
           }
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Bài tập 2"
+      ],
+      "metadata": {
+        "id": "kg5ZIXIMnfsh"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sympy import Symbol, Derivative\n",
+        "x = Symbol('x')\n",
+        "st =3*x**2- 10*x + 7\n",
+        "Derivative(st,x).doit()"
+      ],
+      "metadata": {
+        "id": "9k7wl2dAnhr7",
+        "outputId": "ac57ba22-1799-4512-b5fd-38f98381f68e",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 38
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "6*x - 10"
+            ],
+            "text/latex": "$\\displaystyle 6 x - 10$"
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sympy import Symbol, Derivative\n",
+        "x = Symbol('x')\n",
+        "st =2*x**4 + 2*x**2 + x + 28\n",
+        "Derivative(st,x).doit()"
+      ],
+      "metadata": {
+        "id": "k8x7DvhOnuqz",
+        "outputId": "71f6c88b-14cf-47b4-e8e6-12741e2dc99a",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 38
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "8*x**3 + 4*x + 1"
+            ],
+            "text/latex": "$\\displaystyle 8 x^{3} + 4 x + 1$"
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sympy import Symbol, Derivative\n",
+        "x = Symbol('x')\n",
+        "st =(x- 6)*(8- 4*x)\n",
+        "Derivative(st,x).doit()"
+      ],
+      "metadata": {
+        "id": "a9Izbew0pAS_",
+        "outputId": "d5e8232c-0a6b-4421-bfa8-bcfbeec1a809",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 38
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "32 - 8*x"
+            ],
+            "text/latex": "$\\displaystyle 32 - 8 x$"
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sympy import Symbol, Derivative\n",
+        "x = Symbol('x')\n",
+        "st =(x-6)/(2*x+3)\n",
+        "Derivative(st,x).doit()"
+      ],
+      "metadata": {
+        "id": "31UHfHPUpAOB",
+        "outputId": "1decfccc-7f21-49e0-f249-1d4d16bd7b20",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 61
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "-2*(x - 6)/(2*x + 3)**2 + 1/(2*x + 3)"
+            ],
+            "text/latex": "$\\displaystyle - \\frac{2 \\left(x - 6\\right)}{\\left(2 x + 3\\right)^{2}} + \\frac{1}{2 x + 3}$"
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sympy import Symbol, Derivative\n",
+        "x = Symbol('x')\n",
+        "st =x**3/3+2*x**2- 1/x\n",
+        "Derivative(st,x).doit()"
+      ],
+      "metadata": {
+        "id": "mwWV2CANpALQ",
+        "outputId": "e820d9f3-0210-40ce-9116-3037f1be02ce",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 52
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "x**2 + 4*x + x**(-2)"
+            ],
+            "text/latex": "$\\displaystyle x^{2} + 4 x + \\frac{1}{x^{2}}$"
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sympy import Symbol, Derivative\n",
+        "x = Symbol('x')\n",
+        "st =sympy.ln(2*x**2-x)\n",
+        "Derivative(st,x).doit()"
+      ],
+      "metadata": {
+        "id": "ntX_IBkWpAFM",
+        "outputId": "65f16bb1-c236-4b25-96d7-b931ee484d03",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 52
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(4*x - 1)/(2*x**2 - x)"
+            ],
+            "text/latex": "$\\displaystyle \\frac{4 x - 1}{2 x^{2} - x}$"
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sympy import Symbol, Derivative\n",
+        "import sympy\n",
+        "x = Symbol('x')\n",
+        "f = sympy.sin(x)*sympy.cos(x)\n",
+        "Derivative(f,x).doit()"
+      ],
+      "metadata": {
+        "id": "Te43Xjzwpm2d",
+        "outputId": "3d55401e-4648-46cf-d300-e76369469463",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 38
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "-sin(x)**2 + cos(x)**2"
+            ],
+            "text/latex": "$\\displaystyle - \\sin^{2}{\\left(x \\right)} + \\cos^{2}{\\left(x \\right)}$"
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sympy import Symbol, Derivative\n",
+        "x = Symbol('x')\n",
+        "st =1/(x**2-x+1)\n",
+        "Derivative(st,x).doit()"
+      ],
+      "metadata": {
+        "id": "sv8wdNLppmnR",
+        "outputId": "51678fb8-2ef7-4662-d3ce-a642cc6641ea",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 59
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(1 - 2*x)/(x**2 - x + 1)**2"
+            ],
+            "text/latex": "$\\displaystyle \\frac{1 - 2 x}{\\left(x^{2} - x + 1\\right)^{2}}$"
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sympy import Symbol, Derivative\n",
+        "x = Symbol('x')\n",
+        "st =(x**2+1)**3\n",
+        "Derivative(st,x).doit()"
+      ],
+      "metadata": {
+        "id": "YPExyr3rpmiL",
+        "outputId": "9b589b0c-79a8-4840-95ba-d46475011f61",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 42
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "6*x*(x**2 + 1)**2"
+            ],
+            "text/latex": "$\\displaystyle 6 x \\left(x^{2} + 1\\right)^{2}$"
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sympy import Symbol, Derivative\n",
+        "x = Symbol('x')\n",
+        "st =(2*x+5)**5\n",
+        "Derivative(st,x).doit()"
+      ],
+      "metadata": {
+        "id": "uOWpigOfo_1V",
+        "outputId": "c24c46cf-896b-47df-e0fb-bd95e749cdc7",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 39
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "10*(2*x + 5)**4"
+            ],
+            "text/latex": "$\\displaystyle 10 \\left(2 x + 5\\right)^{4}$"
+          },
+          "metadata": {},
+          "execution_count": 13
         }
       ]
     },
